# fast_shared_mutex

./: README.md
.github/workflows/: unittest.yml
include/: lock_wrapper.h  mutex_protect_wrapper.h  mutex_wrapper.h  shared_mutex.h  timed_atomic.h
include/timed_atomic_uint32/: timed_atomic_uint32_linux.h  timed_atomic_uint32_windows.h
test/: CMakeLists.txt  benchmark.cc  test_lock_wrapper.cpp  test_mutex_protect_wrapper.cc  test_mutex_wrapper.cc  test_shared_mutex.cc
